--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PTI - Web Standarts</title>
-    <link rel="stylesheet" href=".../css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-xxx" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="\js\scripts.js"></script>
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src=".../images/psico-larissa.png" alt="logomarca">
+            <img src="../images/psico-larissa.png" alt="logomarca">
         </div>
         <nav class="menu">
             <ul>
@@ -40,7 +40,7 @@
                     <br>
                     No meu atendimento você contará com uma escuta especializada e atenciosa. Sem julgamento crítico, darei atendimento seguindo os seus princípios e valores. Assim, irei contribuir para o seu autoconhecimento e consequentemente despertar seu potencial de acordo com o que você acredita e almeja.
                 </p>
-                <img src=".../images/img1.jpg" alt="Imagem de uma terapia">
+                <img src="../images/img1.jpg" alt="Imagem de uma terapia">
             </div>
         </div>
         
